--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <ul class="justified-list">
             <li class="jl-item">
 
-                <img onclick="init()" class="clickable" src="/img/reset.png" alt="close">
-                <img onclick="controlVul(this)" data-sound="on" class="clickable" src="/img/volume_up_white_24dp.png"
+                <img onclick="init()" class="clickable" src="img/reset.png" alt="close">
+                <img onclick="controlVul(this)" data-sound="on" class="clickable" src="img/volume_up_white_24dp.png"
                     alt="close">
             </li>
             <li class="jl-item">
@@ -127,11 +127,11 @@
                 <h1 class="win-lose-title">you win</h1>
                 <div class="status-wins">
                     <div>
-                        <img class="icon-win-lose" src="/img/clock_icon.png" alt="">
+                        <img class="icon-win-lose" src="img/clock_icon.png" alt="">
                         <h3>---</h3>
                     </div>
                     <div>
-                        <img class="icon-win-lose" src="/img/trophy_icon.png" alt="">
+                        <img class="icon-win-lose" src="img/trophy_icon.png" alt="">
                         <h3>---</h3>
                     </div>
                 </div>
